# MapReduce

./: .gitignore  CMakeLists.txt  MapReduce.cpp
examples/: WordCount.cpp
include/mapreduce/: Emitter.hpp  MapReduce.hpp  SequentialExecutor.hpp
src/: InvertedIndex.cpp  WordCount.cpp
